# research_agent

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: demo.sh  dev.sh  run_all_backends.sh
src/: __init__.py  auth.py  config.py  errors.py  inngest_client.py  main.py  outbox.py  rag.py  rag_engine.py  rag_sidecar.py  sessions.py  storage.py
src/api/: endpoints.py
src/db/: __init__.py  supabase_store.py
src/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
src/llm/: __init__.py  embeddings.py  factory.py  output_parsers.py
src/observability/: __init__.py  context.py  langsmith.py  redaction.py
src/sidecar/: __init__.py  app.py
src/tools/: __init__.py  fetcher.py  search.py  vector_store.py
supabase/migrations/: 20260408134000_supabase_sessions.sql  20260408150000_session_titles.sql  20260420000000_add_suggestions_to_turns.sql  20260421090000_rag_agent_mode.sql  20260421103000_rag_sidecar_artifacts.sql  20260421120000_event_outbox.sql  20260430120000_rag_chat_session_titles.sql  20260430140000_session_run_status.sql
tests/: conftest.py  test_api.py  test_auth.py  test_edges.py  test_embeddings.py  test_graph.py  test_graph_async_execution.py  test_llm_factory.py  test_nodes.py  test_observability.py  test_outbox.py  test_rag.py  test_rag_sidecar.py  test_sessions_store.py  test_state.py  test_tools_fetcher.py  test_tools_search.py  test_vector_store.py
ui/: .gitignore  index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css  main.tsx  types.ts
ui/src/api/: client.ts
ui/src/components/: ChatForm.tsx  FollowupChat.tsx  Layout.tsx  RagAgentMode.tsx  ReportViewer.tsx  ResearchGraph.tsx  ResearchProgress.tsx  SuggestionChips.tsx
ui/src/components/agents/: AgentCard.tsx  AgentChat.tsx  NewAgentSheet.tsx
ui/src/components/layout/: Navbar.tsx  ThemeProvider.tsx  theme-context.ts
ui/src/components/research/: FollowupChat.tsx  InlineProgress.tsx  QueryComposer.tsx  QueryForm.tsx  ReportViewer.tsx  ResearchProgress.tsx  SessionSidebar.tsx
ui/src/components/resources/: ResourceTable.tsx  UploadFileDialog.tsx
ui/src/components/shell/: AgentRail.tsx  AppShell.tsx
ui/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  label.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  switch.tsx  textarea.tsx
ui/src/hooks/: useTheme.ts
ui/src/lib/: graphEventReducer.test.ts  graphEventReducer.ts  supabase.ts
ui/src/pages/: AgentsPage.tsx  ResearchPage.tsx  ResourcesPage.tsx
ui/src/styles/: index.css  variables.css
ui/src/types/: vendor-modules.d.ts
